--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -11,8 +11,8 @@
       </div>
     </div>
     <form (ngSubmit)="onSubmit()">
-      <h1>Input Leetcode Question Endpoint</h1>
-      <input type="text" [(ngModel)]="questionEndpoint" name="questionEndpoint" placeholder="Enter endpoint">
+      <h1>Input Leetcode Question Title Slug</h1>
+      <input type="text" [(ngModel)]="questionEndpoint" name="questionEndpoint" placeholder="Enter Title Slug">
       <button type="submit">Fetch Question</button>
     </form>
 </div>
